Modified toolbar (moved to fragment)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,9 @@
     <color name="snackbarColor">#FF018786</color>
     <color name="featuredPostTitleBackgroundColor">#FF000000</color>
     <color name="neutralDarkGray">#949494</color>
+    <color name="brandBlueDelft">#1E73BE</color>
+
+
+
 
 </resources>
