--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -15,109 +15,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            tools:visibility="visible"
-            android:id="@+id/mainToolbar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/toolbarInfoIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_information"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/toolbarEmailIcon"
+
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_email"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/toolbarInfoIcon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/toolbarDistrict8Logo"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/district8_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/toolbarInfoIcon"
-                android:layout_marginStart="8dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:padding="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/ic_information"/>
-
-            <ImageView
-                android:id="@+id/toolbarEmailIcon"
-
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:padding="10dp"
-                app:layout_constraintStart_toEndOf="@+id/toolbarInfoIcon"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/ic_email"/>
-
-            <ImageView
-                android:id="@+id/toolbarDistrict8Logo"
-                android:layout_marginStart="20dp"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/district8_logo"/>
-
-            <TextView
-                style="@style/InterTextViewStyle.Body2"
-                android:textColor="@color/black"
-                android:id="@+id/toolbarFilterTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/toolbar_filter"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-        <!--                android:visibility="gone"-->
-        <!--                android:id="@+id/postToolbar"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                app:layout_constraintEnd_toEndOf="parent"-->
-        <!--                app:layout_constraintStart_toStartOf="parent"-->
-        <!--                app:layout_constraintTop_toTopOf="parent"-->
-        <!--                app:layout_constraintBottom_toBottomOf="parent">-->
-
-        <!--                <ImageView-->
-        <!--                    android:id="@+id/toolbarBackIcon"-->
-        <!--                    android:layout_marginStart="18dp"-->
-        <!--                    android:layout_width="40dp"-->
-        <!--                    android:layout_height="40dp"-->
-        <!--                    android:padding="10dp"-->
-        <!--                    app:layout_constraintStart_toStartOf="parent"-->
-        <!--                    app:layout_constraintTop_toTopOf="parent"-->
-        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--                    android:src="@drawable/ic_chevron_left"/>-->
-
-        <!--                <ImageView-->
-        <!--                    android:id="@+id/toolbarTextSizeIcon"-->
-        <!--                    android:layout_marginEnd="1dp"-->
-        <!--                    android:layout_width="40dp"-->
-        <!--                    android:layout_height="40dp"-->
-        <!--                    android:padding="10dp"-->
-        <!--                    app:layout_constraintEnd_toStartOf="@+id/toolbarShareIcon"-->
-        <!--                    app:layout_constraintTop_toTopOf="parent"-->
-        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--                    android:src="@drawable/ic_text_size"/>-->
-
-        <!--                <ImageView-->
-        <!--                    android:id="@+id/toolbarShareIcon"-->
-        <!--                    android:layout_marginEnd="9dp"-->
-        <!--                    android:layout_width="40dp"-->
-        <!--                    android:layout_height="40dp"-->
-        <!--                    android:padding="10dp"-->
-        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
-        <!--                    app:layout_constraintTop_toTopOf="parent"-->
-        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--                    android:src="@drawable/ic_share"/>-->
-
-        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+        <TextView
+            android:id="@+id/toolbarFilterTextView"
+            style="@style/InterTextViewStyle.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="@string/toolbar_filter"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ImageView
         android:id="@+id/featuredPostImage"
         android:layout_width="match_parent"
@@ -162,6 +106,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/featuredPostImage"
-        tools:listitem="@layout/post_item"/>
+        tools:listitem="@layout/post_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
