--- a/app/src/main/res/layout/categories_filter.xml
+++ b/app/src/main/res/layout/categories_filter.xml
@@ -4,12 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="43dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomsheetLayout"
         android:layout_width="match_parent"
+        android:paddingBottom="43dp"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -61,7 +61,6 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-
             android:background="@color/brandBlueDelft"
             android:inputType="text"
             android:text="Pas filter toe"
